some flexbos issues - corrected

--- a/style.css
+++ b/style.css
@@ -268,6 +268,9 @@ section {
 }
 
 .about-containers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   gap: 2rem;
   margin-bottom: 2rem;
   margin-top: 2rem;
@@ -295,7 +298,8 @@ section {
 
 .details-container {
   padding: 1.5rem;
-  flex: 1;
+  flex: 1 1 300px;
+  max-width: 35%;
   background: white;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
@@ -344,8 +348,8 @@ section {
 
 article {
   display: flex;
+  align-items: center;
   width: 10rem;
-  justify-content: space-around;
   gap: 0.5rem;
 }
 
